feat(notification): integrate Gmail SMTP email notifications using Kafka events  for resolved and closed incident