@@ -16,6 +16,7 @@ import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -54,7 +55,7 @@ public class UserServiceImpl implements UserService {
                         modelMapper.map(
                                 user,
                                 UserResponseDto.class))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Cacheable(
@@ -90,6 +91,6 @@ public class UserServiceImpl implements UserService {
                         modelMapper.map(
                                 user,
                                 UserResponseDto.class))
-                .toList();
+                .collect(Collectors.toList());
     }
 }
